syntax = "proto3";
package konstellation.oracle;

// this line is used by starport scaffolding # genesis/proto/import
import "oracle/admin_addr.proto";

option go_package = "x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
		//repeated Params paramsList = 5; // this line is used by starport scaffolding # genesis/proto/stateField
		//uint64 paramsCount = 6; // this line is used by starport scaffolding # genesis/proto/stateField
		//repeated AdminAddr adminAddrList = 3; // this line is used by starport scaffolding # genesis/proto/stateField
		//uint64 adminAddrCount = 4; // this line is used by starport scaffolding # genesis/proto/stateField
		//repeated ExchangeRate exchangeRateList = 1; // this line is used by starport scaffolding # genesis/proto/stateField
		//uint64 exchangeRateCount = 2; // this line is used by starport scaffolding # genesis/proto/stateField
    // this line is used by starport scaffolding # ibc/genesis/proto

	repeated AdminAddr allowed_addresses = 1;
}
